# picipedia-cortex

./: .gitignore  README.md  compile.py  pyproject.toml
components/: __init__.py  preprocess.py  test.py  train.py
docs/mermaid/: README.md  ROOT-README.md
pipelines/: __init__.py  classic_cnn_pipeline.py  classic_cnn_pipeline.yaml
