[project]
name = "picipedia-cortex"
version = "0.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
torchvision = "~0.24.1"
python = "~3.14.0"
pandas = "~2.3.3"
numpy = "~2.3.4"
torch = "~2.9.1"
kfp = "~2.14.6"
